--- a/index.html
+++ b/index.html
@@ -127,11 +127,17 @@
   <button onclick= "document.getElementById('demo14').style.display='block'">  Fun Facts  </button>
  <p id= "demo14" style= "display:none"><img src= "TigerFunFact.jpg" class="center"></p>
  </div>
+    <div>
   <h3>There are only 1 out of 10,000 tigers that are born as white tigers in the wild!</h3>
     <button onclick= "document.getElementById('demo15').style.display='block'">  Fun Facts 2  </button>
  <p id= "demo15" style= "display:none"><img src= "Reflection.jpg" class="center"></p>
  </div>
+    <div>
   <h3>You have never seen your face, only pictures or reflections!</h3>
+         <button onclick= "document.getElementById('demo16').style.display='block'">  Fun Facts 3  </button>
+ <p id= "demo16" style= "display:none"><img src= "ChocolateMilk.jpg" class="center"></p>
+ </div>
+  <h3>Chocolate Milk was originally sold as medicine!</h3>
     
   </body>
 </html>
@@ -139,7 +145,7 @@
 <h2> Currently Reading: </h2>
 <h3><a href= "http://www.tigerscursebook.com/"> Tigers Voyage by Colleen Houck </a></h3>
   <div>
-  <button onclick= "document.getElementById('demo16').style.display='block'">  Currently Reading  </button>
-  <p id= "demo16" style= "display:none"><img src="TigersCurse.jpg" class="center"></p>
+  <button onclick= "document.getElementById('demo17').style.display='block'">  Currently Reading  </button>
+  <p id= "demo17" style= "display:none"><img src="TigersCurse.jpg" class="center"></p>
     </div>
 </a> </h3>
